--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                         <h1>NuCamp</h1>
                         <h2>a better way to camp</h2>
                     </div>
+                    <div class="col-md-4 col-xl-2 mt-4">
+                        <a href="#reserveForm" class="btn btn-info btn-lg">
+                            Reserve Campsite
+                        </a>
+                    </div>
                 </div>
             </div>
         </header>
@@ -117,12 +122,22 @@
                     <h2>Featured Campsites</h2>
                 </div>
                 <div class="col">
-                    <h3>React Lake Campground</h3>
-                    <p class="d-none d-sm-block">
-                        Nestled in the foothills of the Chrome Mountains, this
-                        campground on the shores of the pristine React Lake is a
-                        favorite for fly fishers.
-                    </p>
+                    <div class="media">
+                        <div class="media-body align-self-center">
+                            <h3>React Lake Campground</h3>
+                            <p class="d-none d-sm-block">
+                                Nestled in the foothills of the Chrome
+                                Mountains, this campground on the shores of the
+                                pristine React Lake is a favorite for fly
+                                fishers.
+                            </p>
+                        </div>
+                        <img
+                            src="/img/react-lake-thumb.jpg"
+                            alt="React Lake thumbnail"
+                            class="d-flex ml-3 img-thumbnail"
+                        />
+                    </div>
                 </div>
             </div>
 
@@ -147,10 +162,73 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Reserve campsites -->
+            <div class="row row-content">
+                <div class="col-sm-6 mx-auto">
+                    <div class="card">
+                        <h3 class="card-header bg-info text-white">
+                            Reserve Campsites
+                        </h3>
+                        <div class="card-body">
+                            <form id="reserveForm">
+                                <div class="row form-group">
+                                    <label
+                                        for="nuCampers"
+                                        class="col-sm-6 col-form-label"
+                                        >Number of Campers</label
+                                    >
+                                    <div class="col">
+                                        <select
+                                            name="nuCampers"
+                                            id="nuCampers"
+                                            class="form-control"
+                                        >
+                                            <option selected>Select...</option>
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <label
+                                        for="date"
+                                        class="col-sm-6 col-form-label"
+                                        >Date</label
+                                    >
+                                    <div class="col">
+                                        <input
+                                            type="date"
+                                            name="date"
+                                            id="date"
+                                            placeholder=""
+                                            class="form-control"
+                                        />
+                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col">
+                                        <button
+                                            class="btn btn-primary"
+                                            type="submit"
+                                        >
+                                            Search
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Footer -->
-        <footer>
+        <footer class="site-footer">
             <div class="container">
                 <div class="row">
                     <div class="col-4 col-sm-2 offset-1">
